Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


    
2007-Dec-06 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+all
	Solved zoom key command problems (under linux and windows)
	(seen http://sourceforge.net/tracker/index.php?func=detail&aid=1844960&group_id=145591&atid=762476)
	
+pcbnew
	solved bug when loading a footprint in modedit: invisible text attribute was lost (trunk and tag)


2007-Dec-4 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    added the D() macro to fctsys.h to ease conditional debug printf()s.
    worked on http://sourceforge.net/tracker/index.php?func=detail&aid=1844960&group_id=145591&atid=762476
    but could not resolve it in 1/2 day.
    

2007-Dec-4 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * drc.cpp and dialog_drc.cpp update.
    Added double click support on a MARKER or unconnected DRC_ITEM in the listboxes.
    On Linux, it sometimes pops up the menu from PcbGeneralLocateAndDisplay()
    for some reason after repositioning the cursor.  That is not intended, but 
    after several attempts to work around it, I realized it is not so bad to 
    have this happen.
  * Added right click popup menus to the list boxes.  User must first select
    the item he wants to go to, as the right click does not change the selection.
  * Added WinEDA_BasePcbFrame::CursorGoto( const wxPoint& ) by factoring it
    out of pcbnew/find.cpp
    Done now, its ready for folks to start using it and testing it.

    
2007-Dec-02 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema: